Fixed image alignement 2.0

--- a/projfinalreport/style.css
+++ b/projfinalreport/style.css
@@ -27,7 +27,7 @@ h5 {
   padding: 0%;
   text-align: center;
   font-size: 80%;
-  vertical-align:middle;
+  vertical-align: middle;
   justify-content: center;
   display: table-cell;
 }
@@ -37,4 +37,6 @@ h5 {
   display: table;
   justify-content: center;
   vertical-align:middle;
+  margin-left: auto;
+margin-right: auto;
 }
